--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "fastapi>=0.121.1",
+    "generativeai>=0.0.1",
+    "google-generativeai>=0.8.5",
+    "python-dotenv>=1.2.1",
+    "requests>=2.32.5",
+    "uvicorn[standard]>=0.38.0",
+]
