--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
       # Instala as dependências com uv
       - name: Install dependencies
         run: |
-          uv pip install -e .[test]
+          uv pip install --system -e .[test]
 
       # Roda os testes com pytest
       - name: Run Pytest
