--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -1,31 +1,29 @@
-name: Validate Staging Environment
+name: Deploy to Production
 
 on:
-  workflow_run:
-    workflows: ["Deploy to Staging"]
-    types: [completed]
-    branches: [staging]
+  push:
+    branches: [main]
+  workflow_dispatch:
 
 permissions:
   contents: read
   issues: write
 
 jobs:
-  integration-tests:
-    name: Run Integration Tests
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+  pre-deploy-validation:
+    name: Pre-Deploy Validation
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout staging branch
+      - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: staging
+          ref: main
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.14'
+          python-version: '3.11'
 
       - name: Install UV
         uses: astral-sh/setup-uv@v3
@@ -34,27 +32,86 @@ jobs:
           cache-dependency-glob: "uv.lock"
 
       - name: Install dependencies with UV
-        run: |
-          uv sync 
+        run: uv sync --frozen
 
-      - name: Run Integration Tests with TestClient
+      - name: Run Integration Tests
         env:
           API_KEY: ${{ secrets.API_KEY }}
         run: |
-          echo "Executando testes de integração com TestClient..."
-          uv run pytest tests/integration/ -v --tb=short --cov=app --cov-report=term-missing
+          echo "🧪 Executando testes de integração antes do deploy..."
+          uv run pytest tests/integration/ -v --tb=short
 
+      - name: Verify Docker Build
+        run: |
+          echo "🐳 Verificando build do Docker..."
+          docker build -t chatbot-cloud:production .
+
+  deploy-production:
+    name: Deploy to Railway Production
+    needs: pre-deploy-validation
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: main
+
+      - name: Deploy to Railway Production
+        uses: bervProject/railway-deploy@main
+        with:
+          railway_token: ${{ secrets.RAILWAY_TOKEN }}
+          service: ${{ secrets.RAILWAY_SERVICE_PRODUCTION }}
+        
+      - name: Wait for deployment
+        run: |
+          echo "⏳ Aguardando deployment estabilizar..."
+          sleep 30
+
+      - name: Health Check Production
+        env:
+          PRODUCTION_URL: ${{ secrets.PRODUCTION_URL }}
+        run: |
+          echo "🏥 Verificando health do serviço em produção..."
+          
+          max_attempts=10
+          attempt=1
+          
+          while [ $attempt -le $max_attempts ]; do
+            response=$(curl -s -o /dev/null -w "%{http_code}" ${PRODUCTION_URL}/health || echo "000")
+            
+            if [ "$response" = "200" ]; then
+              echo "✅ Produção está saudável! (tentativa $attempt/$max_attempts)"
+              exit 0
+            fi
+            
+            echo "⏳ Aguardando... (tentativa $attempt/$max_attempts)"
+            sleep 10
+            attempt=$((attempt + 1))
+          done
+          
+          echo "❌ Produção não respondeu após $max_attempts tentativas!"
+          exit 1
+
+      - name: Create Release Tag
+        if: success()
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          VERSION=$(date +"%Y.%m.%d-%H%M")
+          git tag -a "v${VERSION}" -m "Production release v${VERSION}"
+          git push origin "v${VERSION}" || echo "Tag já existe"
+          
+          echo "✅ Tag de release criada: v${VERSION}"
 
       - name: Notify Success
         if: success()
         run: |
-          echo "Todas as validações passaram!"
-          echo "Código validado e pronto para produção"
-
-      - name: Notify Failure
-        if: failure()
-        run: |
-          echo "Validação FALHOU!"
+          echo "🎉 Deploy em PRODUÇÃO concluído com sucesso!"
+          echo "✅ Health check passou"
+          echo "📌 Tag de release criada"
+          echo "🔗 Aplicação: ${{ secrets.PRODUCTION_URL }}"
 
       - name: Create Issue on Failure
         if: failure()
@@ -64,25 +121,24 @@ jobs:
             github.rest.issues.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              title: '🚨 Falha nos Testes de Integração - Staging',
-              body: `## ❌ Testes de Integração Falharam
+              title: '🚨 CRÍTICO: Falha no Deploy de PRODUÇÃO',
+              body: `## ❌ Deploy em Produção FALHOU
               
-              **Branch:** staging
-              **Workflow:** ${context.workflow}
-              **Run:** [#${context.runNumber}](${context.payload.repository.html_url}/actions/runs/${context.runId})
+              **Branch:** main (production)
+              **Commit:** ${context.sha.substring(0, 7)}
+              **Workflow:** [${context.workflow}](${context.payload.repository.html_url}/actions/runs/${context.runId})
               
-              ### 🔍 Ações necessárias:
+              ### 🚨 Ações URGENTES:
               1. Verificar logs do workflow
-              2. Executar testes localmente: \`uv run pytest tests/integration/ -v\`
-              3. Corrigir problemas identificados
-              4. Fazer commit e push para staging
+              2. Checar Railway Dashboard
+              3. Considerar rollback
               
-              ### 📋 Comandos úteis:
+              ### 🔙 Rollback:
               \`\`\`bash
-              # Rodar testes localmente
-              export API_KEY="your-key"
-              uv run pytest tests/integration/ -v --tb=short
+              git revert ${context.sha}
+              git push origin main
               \`\`\`
               `,
-              labels: ['bug', 'staging', 'integration-tests', 'ci-failed']
+              labels: ['critical', 'production', 'deployment-failed'],
+              assignees: ['${context.actor}']
             })
