--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,29 @@
-name: CI Pipeline
+name: Deploy to Production
 
 on:
   push:
-    branches: [dev, main]
-  pull_request:
-    branches: [dev, main]
+    branches: [main]
+  workflow_dispatch:
 
 permissions:
   contents: read
+  issues: write
 
 jobs:
-  test:
-    name: Test and Build
+  pre-deploy-validation:
+    name: Pre-Deploy Validation
     runs-on: ubuntu-latest
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: main
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.14'
 
       - name: Install UV
         uses: astral-sh/setup-uv@v3
@@ -30,30 +32,113 @@ jobs:
           cache-dependency-glob: "uv.lock"
 
       - name: Install dependencies with UV
-        run: |
-          uv sync --frozen
+        run: uv sync --frozen
 
-      - name: Run Ruff Linter
-        run: |
-          uv run ruff check .
-
-      - name: Run Tests
+      - name: Run Integration Tests
         env:
           API_KEY: ${{ secrets.API_KEY }}
         run: |
-          uv run pytest tests/ -v
-
-      - name: Build Docker Image
-        run: |
-          docker build -t chatbot-cloud:test .
+          echo "🧪 Executando testes de integração antes do deploy..."
+          uv run pytest tests/integration/ -v --tb=short
 
       - name: Verify Docker Build
         run: |
-          docker images chatbot-cloud:test
+          echo "🐳 Verificando build do Docker..."
+          docker build -t chatbot-cloud:production .
+
+  deploy-production:
+    name: Deploy to Railway Production
+    needs: pre-deploy-validation
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: main
+
+      - name: Deploy to Railway Production
+        uses: bervProject/railway-deploy@main
+        with:
+          railway_token: ${{ secrets.RAILWAY_TOKEN }}
+          service: ${{ secrets.RAILWAY_SERVICE_PRODUCTION }}
+        
+      - name: Wait for deployment
+        run: |
+          echo "⏳ Aguardando deployment estabilizar..."
+          sleep 30
+
+      - name: Health Check Production
+        env:
+          PRODUCTION_URL: ${{ secrets.PRODUCTION_URL }}
+        run: |
+          echo "🏥 Verificando health do serviço em produção..."
+          
+          max_attempts=10
+          attempt=1
+          
+          while [ $attempt -le $max_attempts ]; do
+            response=$(curl -s -o /dev/null -w "%{http_code}" ${PRODUCTION_URL}/health || echo "000")
+            
+            if [ "$response" = "200" ]; then
+              echo "✅ Produção está saudável! (tentativa $attempt/$max_attempts)"
+              exit 0
+            fi
+            
+            echo "⏳ Aguardando... (tentativa $attempt/$max_attempts)"
+            sleep 10
+            attempt=$((attempt + 1))
+          done
+          
+          echo "❌ Produção não respondeu após $max_attempts tentativas!"
+          exit 1
+
+      - name: Create Release Tag
+        if: success()
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          VERSION=$(date +"%Y.%m.%d-%H%M")
+          git tag -a "v${VERSION}" -m "Production release v${VERSION}"
+          git push origin "v${VERSION}" || echo "Tag já existe"
+          
+          echo "✅ Tag de release criada: v${VERSION}"
 
       - name: Notify Success
         if: success()
         run: |
-          echo "✅ CI Pipeline passou com sucesso!"
-          echo "📦 Todos os testes passaram"
-          echo "🐳 Build Docker concluído"
+          echo "🎉 Deploy em PRODUÇÃO concluído com sucesso!"
+          echo "✅ Health check passou"
+          echo "📌 Tag de release criada"
+          echo "🔗 Aplicação: ${{ secrets.PRODUCTION_URL }}"
+
+      - name: Create Issue on Failure
+        if: failure()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: '🚨 CRÍTICO: Falha no Deploy de PRODUÇÃO',
+              body: `## ❌ Deploy em Produção FALHOU
+              
+              **Branch:** main (production)
+              **Commit:** ${context.sha.substring(0, 7)}
+              **Workflow:** [${context.workflow}](${context.payload.repository.html_url}/actions/runs/${context.runId})
+              
+              ### 🚨 Ações URGENTES:
+              1. Verificar logs do workflow
+              2. Checar Railway Dashboard
+              3. Considerar rollback
+              
+              ### 🔙 Rollback:
+              \`\`\`bash
+              git revert ${context.sha}
+              git push origin main
+              \`\`\`
+              `,
+              labels: ['critical', 'production', 'deployment-failed'],
+              assignees: ['${context.actor}']
+            })
