--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.14'
 
       - name: Install UV
         uses: astral-sh/setup-uv@v3
@@ -47,7 +47,7 @@ jobs:
           docker build -t chatbot-cloud:production .
 
   deploy-production:
-    name: Deploy to Railway Production
+    name: Deploy to Railway Production (Zero Downtime)
     needs: pre-deploy-validation
     runs-on: ubuntu-latest
     
@@ -63,35 +63,94 @@ jobs:
           railway_token: ${{ secrets.RAILWAY_TOKEN }}
           service: ${{ secrets.RAILWAY_SERVICE_PRODUCTION }}
         
-      - name: Wait for deployment
+      - name: Wait for deployment stabilization
         run: |
-          echo "⏳ Aguardando deployment estabilizar..."
-          sleep 30
+          echo "⏳ Aguardando deployment estabilizar (zero downtime)..."
+          echo "🔄 Railway faz rolling deployment automaticamente"
+          sleep 45
 
-      - name: Health Check Production
+      - name: Health Check Production (Zero Downtime Verification)
         env:
           PRODUCTION_URL: ${{ secrets.PRODUCTION_URL }}
         run: |
           echo "🏥 Verificando health do serviço em produção..."
+          echo "⚡ Zero downtime: aplicação deve estar respondendo"
           
-          max_attempts=10
+          max_attempts=15
           attempt=1
+          success_count=0
+          required_successes=3  # Precisa passar 3 vezes seguidas
           
           while [ $attempt -le $max_attempts ]; do
             response=$(curl -s -o /dev/null -w "%{http_code}" ${PRODUCTION_URL}/health || echo "000")
             
             if [ "$response" = "200" ]; then
-              echo "✅ Produção está saudável! (tentativa $attempt/$max_attempts)"
-              exit 0
+              success_count=$((success_count + 1))
+              echo "✅ Health check OK! (tentativa $attempt/$max_attempts - sucessos: $success_count/$required_successes)"
+              
+              if [ $success_count -ge $required_successes ]; then
+                echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+                echo "✅ PRODUÇÃO ESTÁVEL E SAUDÁVEL!"
+                echo "⚡ Zero downtime confirmado"
+                echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+                exit 0
+              fi
+            else
+              success_count=0  # Reset contador se falhar
+              echo "⏳ Aguardando estabilização... (tentativa $attempt/$max_attempts - código: $response)"
             fi
             
-            echo "⏳ Aguardando... (tentativa $attempt/$max_attempts)"
-            sleep 10
+            sleep 5
             attempt=$((attempt + 1))
           done
           
-          echo "❌ Produção não respondeu após $max_attempts tentativas!"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "❌ PRODUÇÃO NÃO ESTABILIZOU!"
+          echo "⚠️ Possível downtime detectado"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
           exit 1
+
+      - name: Smoke Test Production
+        env:
+          PRODUCTION_URL: ${{ secrets.PRODUCTION_URL }}
+          API_KEY: ${{ secrets.API_KEY }}
+        run: |
+          echo "💨 Executando smoke tests em produção..."
+          
+          # Test 1: Health
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "🏥 Testando /health..."
+          health_response=$(curl -s -o /dev/null -w "%{http_code}" ${PRODUCTION_URL}/health)
+          if [ "$health_response" = "200" ]; then
+            echo "✅ Health endpoint OK"
+          else
+            echo "❌ Health endpoint falhou: $health_response"
+            exit 1
+          fi
+          
+          # Test 2: Chat
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "💬 Testando /chat..."
+          chat_response=$(curl -s -X POST ${PRODUCTION_URL}/chat \
+            -H "Content-Type: application/json" \
+            -H "X-API-Key: ${API_KEY}" \
+            -d '{"message":"production smoke test"}' \
+            -w "\n%{http_code}")
+          
+          http_code=$(echo "$chat_response" | tail -n1)
+          response_body=$(echo "$chat_response" | head -n-1)
+          
+          if [ "$http_code" = "200" ]; then
+            echo "✅ Chat endpoint OK"
+            echo "📝 Resposta: $response_body"
+          else
+            echo "❌ Chat endpoint falhou: $http_code"
+            echo "📝 Resposta: $response_body"
+            exit 1
+          fi
+          
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "✅ Todos os smoke tests passaram!"
 
       - name: Create Release Tag
         if: success()
@@ -100,7 +159,12 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
           VERSION=$(date +"%Y.%m.%d-%H%M")
-          git tag -a "v${VERSION}" -m "Production release v${VERSION}"
+          git tag -a "v${VERSION}" -m "Production release v${VERSION}
+          
+          ✅ Zero downtime deploy
+          ✅ Health checks passed
+          ✅ Smoke tests passed"
+          
           git push origin "v${VERSION}" || echo "Tag já existe"
           
           echo "✅ Tag de release criada: v${VERSION}"
@@ -108,10 +172,27 @@ jobs:
       - name: Notify Success
         if: success()
         run: |
-          echo "🎉 Deploy em PRODUÇÃO concluído com sucesso!"
-          echo "✅ Health check passou"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "🎉 DEPLOY EM PRODUÇÃO CONCLUÍDO!"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "✅ Zero downtime deploy"
+          echo "✅ Health checks passaram"
+          echo "✅ Smoke tests passaram"
           echo "📌 Tag de release criada"
           echo "🔗 Aplicação: ${{ secrets.PRODUCTION_URL }}"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+
+      - name: Rollback on Failure
+        if: failure()
+        run: |
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "🚨 DEPLOY FALHOU - INICIANDO ROLLBACK"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "⚠️ AÇÃO MANUAL NECESSÁRIA:"
+          echo "1. Verificar Railway Dashboard"
+          echo "2. Fazer rollback manual se necessário"
+          echo "3. Ou executar: git revert HEAD && git push"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
 
       - name: Create Issue on Failure
         if: failure()
@@ -124,21 +205,43 @@ jobs:
               title: '🚨 CRÍTICO: Falha no Deploy de PRODUÇÃO',
               body: `## ❌ Deploy em Produção FALHOU
               
+              **⚠️ ATENÇÃO: Ambiente de produção pode estar comprometido!**
+              
               **Branch:** main (production)
               **Commit:** ${context.sha.substring(0, 7)}
               **Workflow:** [${context.workflow}](${context.payload.repository.html_url}/actions/runs/${context.runId})
               
               ### 🚨 Ações URGENTES:
-              1. Verificar logs do workflow
-              2. Checar Railway Dashboard
-              3. Considerar rollback
+              1. ✅ Verificar logs do workflow
+              2. ✅ Checar Railway Dashboard
+              3. ✅ Testar endpoint: ${process.env.PRODUCTION_URL}/health
+              4. ✅ Considerar rollback imediato
               
-              ### 🔙 Rollback:
+              ### 🔙 Rollback Rápido:
               \`\`\`bash
-              git revert ${context.sha}
+              # Opção 1: Revert último commit
+              git checkout main
+              git revert HEAD
               git push origin main
+              
+              # Opção 2: Reset para versão anterior
+              git checkout main
+              git reset --hard HEAD~1
+              git push --force origin main
+              
+              # Opção 3: Railway Dashboard
+              # Fazer rollback manual no Railway
+              \`\`\`
+              
+              ### 📊 Health Check:
+              \`\`\`bash
+              curl ${process.env.PRODUCTION_URL}/health
+              curl -X POST ${process.env.PRODUCTION_URL}/chat \\
+                -H "Content-Type: application/json" \\
+                -H "X-API-Key: ${process.env.API_KEY}" \\
+                -d '{"message":"test"}'
               \`\`\`
               `,
-              labels: ['critical', 'production', 'deployment-failed'],
+              labels: ['critical', 'production', 'deployment-failed', 'urgent'],
               assignees: ['${context.actor}']
             })
