--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
             \`${{ github.event.head_commit.message }}\`
             
             **SHA:** ${{ github.sha }}" \
-            --label automated,staging || echo "⚠️ PR já existe ou não há diferenças entre dev e staging"
+            || echo "⚠️ PR já existe ou não há diferenças entre dev e staging"
 
       - name: Notify Success
         if: success()
