--- a/.github/workflows/3_deploy_staging.yml
+++ b/.github/workflows/3_deploy_staging.yml
@@ -31,6 +31,6 @@ jobs:
         run: npm install -g @railway/cli
 
       - name: Deploy to Railway Staging
-        run: railway up --service staging
+        run: railway up --service ${{ secrets.RAILWAY_SERVICE_STAGING }}
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
