fix: validation production

--- a/.github/workflows/4_validation_production.yml
+++ b/.github/workflows/4_validation_production.yml
@@ -1,4 +1,4 @@
-name: Validation and Production Deploy
+name: Validation & Production Merge
 
 on:
   workflow_run:
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: staging
+          ref: ${{ github.event.workflow_run.head_branch }}
       
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -39,7 +39,6 @@ jobs:
           STAGING_URL: ${{ secrets.STAGING_URL }}
           RAILWAY_SERVICE_STAGING: ${{ secrets.RAILWAY_SERVICE_STAGING }}
       
-   
 
   create-production-pr:
     name: Create PR to Main
@@ -53,17 +52,17 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
+          ref: staging
       
       - name: Create Pull Request
-        id: create-pr
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: staging
-          base: main
-          title: "🚀 Merge to Main"
-          body: |
-            ## Merge to Main
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh pr create \
+            --base main \
+            --head staging \
+            --title "🚀 Merge to Main" \
+            --body "## Merge to Main
             
             ✅ All staging validation tests passed successfully
             
@@ -72,8 +71,9 @@ jobs:
             - Functional tests: ✅
             - Health check: ✅
             
-            This PR is auto-generated after successful staging validation.
-          assignees: ${{ github.actor }}
+            This PR is auto-generated after successful staging validation." \
+            --assignee ${{ github.actor }} \
+            || echo "⚠️ PR já existe ou não há diferenças"
       
       
   notify-failure:
