fix: validation production

--- a/.github/workflows/3_deploy_staging.yml
+++ b/.github/workflows/3_deploy_staging.yml
@@ -12,6 +12,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.14'
+
+      - name: Install UV
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: Install dependencies with UV
+        run: uv sync --frozen
 
       - name: Install Railway CLI
         run: npm install -g @railway/cli
