--- a/.github/workflows/5_deploy_production.yml
+++ b/.github/workflows/5_deploy_production.yml
@@ -1,17 +1,19 @@
-name: Deploy to Staging
+name: Deploy to Production
 
 on:
   push:
     branches:
-      - staging
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         
+      # 1. Correção Crítica: Alinhado com Dockerfile e Staging (3.12)
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -23,29 +25,24 @@ jobs:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
 
-      - name: Install dependencies
+      - name: Install dependencies with UV
+        # Garante que o pyproject.toml e uv.lock estão íntegros antes de enviar
         run: uv sync --frozen
 
       - name: Install Railway CLI
         run: npm install -g @railway/cli
 
-      - name: Deploy to Railway Staging
-        run: railway up --service ${{ secrets.RAILWAY_SERVICE_STAGING }} --detach
+      - name: Deploy to Railway Production
+        # --detach libera o GitHub Action assim que o build começa no Railway
+        run: railway up --service ${{ secrets.RAILWAY_SERVICE_PRODUCTION }} --detach
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
       
-      - name: Deployment Summary
-        run: echo "✅ Deploy finalizado. Iniciando o job de validação..."
 
-  # --- JOB DE CHAMADA (TRIGGER) ---
-  trigger-validation:
-    # Este job depende do sucesso do job 'deploy' acima
-    needs: deploy
-    if: success()
-    
-    # Chama o arquivo do workflow receptor.
-    # O caminho deve ser EXATO a partir da raiz do repositório.
-    uses: ./.github/workflows/validation_production_merge.yml
-    
-    # Passa todos os secrets necessários (API_KEY, Tokens, URLs) para o receptor
-    secrets: inherit
+
+      - name: Deployment Summary
+        if: success()
+        run: |
+          echo "✅ Deploy de Produção acionado com sucesso!"
+          echo "🚀 Versão enviada para o Railway"
+          echo "🏷️ Tag criada no GitHub para rastreabilidade"
