--- a/.github/workflows/2_validation_staging.yml
+++ b/.github/workflows/2_validation_staging.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   validate-and-merge:
-    name: Validate and Auto-merge
+    name: Validate, Push and Auto-merge
     runs-on: ubuntu-latest
     if: github.event.pull_request.head.ref == 'dev'
     
@@ -22,7 +22,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
 
-      # 1. Ajuste de versão para 3.12 (Alinhado com Dockerfile)
+      # --- CONFIGURAÇÃO DE AMBIENTE ---
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -34,6 +34,14 @@ jobs:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
 
+      # --- LOGIN DOCKER (Necessário antes do build/push) ---
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # --- TESTES DE CÓDIGO ---
       - name: Install dependencies with UV
         run: uv sync --frozen
 
@@ -49,21 +57,25 @@ jobs:
           echo "🧪 Executando testes de CI..."
           uv run pytest tests/ci/ -v
 
+      # --- BUILD DA IMAGEM ---
       - name: Build Docker Image
+        # Define o nome completo da imagem (usuario/repo:tag)
         run: |
           echo "🐳 Construindo imagem Docker..."
-          docker build -t chatbot-cloud:staging .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/chatbot-cloud:staging .
 
-      # 2. Smoke Test adicionado (Crítico antes do Auto-Merge)
+      # --- SMOKE TEST (Testa a imagem localmente antes de subir) ---
       - name: Smoke Test Docker Image
         env:
           API_KEY: ${{ secrets.API_KEY }}
+          # Armazena o nome da imagem numa variável para facilitar
+          IMAGE_TAG: ${{ secrets.DOCKER_USERNAME }}/chatbot-cloud:staging
         run: |
           echo "🔥 Iniciando Smoke Test do container..."
           docker run -d --name staging-smoke \
             -e API_KEY=$API_KEY \
             -p 8000:8000 \
-            chatbot-cloud:staging
+            $IMAGE_TAG
           
           echo "⏳ Aguardando inicialização (10s)..."
           sleep 10
@@ -73,39 +85,45 @@ jobs:
             docker logs staging-smoke
             docker rm -f staging-smoke
           else
-            echo "❌ CRÍTICO: Container falhou ao iniciar. Abortando merge."
+            echo "❌ CRÍTICO: Container falhou ao iniciar. Abortando deploy e merge."
             docker logs staging-smoke
             exit 1
           fi
 
+      # --- PUSH PARA DOCKER HUB (Só roda se o Smoke Test passar) ---
+      - name: Push Image to Docker Hub
+        run: |
+          echo "🚀 Smoke Test aprovado. Enviando imagem para Docker Hub..."
+          docker push ${{ secrets.DOCKER_USERNAME }}/chatbot-cloud:staging
+
+      # --- AUTO-MERGE ---
       - name: Enable Auto-merge
         if: success()
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "✅ Todos os testes e smoke test passaram!"
+          echo "✅ Imagem publicada e testes aprovados!"
           echo "🔓 Habilitando merge automático..."
           gh pr merge ${{ github.event.pull_request.number }} \
             --auto \
             --merge \
-            --subject "✅ Auto-merge: Dev -> Staging (Validado com Smoke Test)"
+            --subject "✅ Auto-merge: Dev -> Staging (Imagem Publicada)"
 
+      # --- NOTIFICAÇÕES ---
       - name: Add Success Comment
         if: success()
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh pr comment ${{ github.event.pull_request.number }} \
-            --body "✅ **Validação Concluída com Sucesso**
+            --body "✅ **Deploy e Validação Concluídos**
             
             O pipeline de staging validou este PR:
-            - ✅ Ruff Linter
-            - ✅ Testes Unitários
-            - ✅ Docker Build
-            - ✅ Docker Smoke Test (Execução real)
+            - ✅ Testes (Ruff & Pytest)
+            - ✅ Smoke Test (Container funcional)
+            - 🚀 **Imagem Publicada:** \`${{ secrets.DOCKER_USERNAME }}/chatbot-cloud:staging\`
             
-            **Status:**
-            - Auto-merge habilitado. O PR será mesclado assim que as aprovações de revisão forem satisfeitas."
+            **Status:** Merge automático habilitado."
 
       - name: Notify Failure
         if: failure()
@@ -115,8 +133,4 @@ jobs:
           gh pr comment ${{ github.event.pull_request.number }} \
             --body "❌ **Validação Falhou**
             
-            O merge automático foi bloqueado devido a falhas no pipeline.
-            
-            **Verifique os logs:**
-            - Se falhou no 'Smoke Test', o container não subiu corretamente.
-            - Se falhou nos testes, revise a lógica."
+            O merge foi bloqueado e a imagem **NÃO** foi publicada. Verifique os logs."
