--- a/.github/workflows/2_deploy_staging.yml
+++ b/.github/workflows/2_deploy_staging.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          
+
         # --- BUILD DA IMAGEM ---
       - name: Build Docker Image
         # Define o nome completo da imagem (usuario/repo:tag)
@@ -83,7 +83,7 @@ jobs:
         # Se quiser esperar o deploy terminar para só então validar, remova o --detach
         run: railway up --service ${{ secrets.RAILWAY_SERVICE_STAGING }} --detach
         env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN_STAGING }}
       
       - name: Deployment Summary
         run: echo "✅ Deploy enviado para o Railway via CLI. Iniciando validação..."
