docker and front alterations

--- a/.github/workflows/4_deploy_production.yml
+++ b/.github/workflows/4_deploy_production.yml
@@ -84,6 +84,7 @@ jobs:
         run: railway up --service ${{ secrets.RAILWAY_SERVICE_PRODUCTION }} --detach
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+          API_url: ${{ secrets.API_url}}
       
 
 
