--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "chatbot-cloud"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.121.1",
     "generativeai>=0.0.1",
@@ -13,6 +13,7 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "ruff>=0.14.4",
+    "streamlit>=1.51.0",
     "uvicorn[standard]>=0.38.0",
 ]
 
